--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,9 @@ $custom-control-indicator-size: 1.25rem;
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/custom-forms";
+@import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
+
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/utilities";
 
