--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,7 @@ $custom-control-indicator-size: 1.25rem;
 @import "~bootstrap/scss/custom-forms";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
-
+@import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/utilities";
 
