Implement better setup process
fixes #4

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ $custom-control-indicator-size: 1.25rem;
 @import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/list-group";
 
 body {
 	margin: 0;
