--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,9 @@ $custom-control-indicator-size: 1.25rem;
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/list-group";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/alert";
+@import "~bootstrap/scss/close";
 
 body {
 	margin: 0;
