Make linking process more automatic
Now polls the bridge every 1 second for 30 seconds
instead of manually needing to press the button

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@ $custom-control-indicator-size: 1.25rem;
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/alert";
 @import "~bootstrap/scss/close";
+@import "~bootstrap/scss/progress";
 
 body {
 	margin: 0;
