Directory structure changes & add Settings page

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@ $custom-control-indicator-size: 1.25rem;
 @import "~bootstrap/scss/alert";
 @import "~bootstrap/scss/close";
 @import "~bootstrap/scss/progress";
+@import "~bootstrap/scss/forms";
 
 body {
 	margin: 0;
