Brightness slider styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
-$custom-range-track-bg: rgba(255, 255, 255, 0.5);
+$custom-range-track-bg: rgba(0, 0, 0, 0.2);
 $custom-range-track-height: 1.25rem;
 $custom-range-thumb-bg: white;
+$custom-range-thumb-border: 1px solid #CCCCCC;
 $custom-range-thumb-width: 1.25rem;
+
 $custom-control-gutter: 0;
 $custom-control-indicator-bg: white;
 $custom-control-indicator-checked-bg: rgba(0, 0, 0, 0.2);
